<resources>
    <string name="app_name">&appname;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marlon Apolo</string>
    <string name="nav_header_subtitle">marlon.apolo@gmail
        .com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuraciones</string>
    <string name="menu_home">Bienvenido</string>
    <string name="menu_datos_personales">Datos personales</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_admin">Administración</string>
    <string name="menu_admin_trab">Trabajadores</string>
    <string name="menu_admin_emp">Empleadores</string>
    <string name="menu_admin_ofi">Oficios</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_eliminar_cuenta">Eliminar cuenta</string>
    <string name="menu_poli_priv">Política de privacidad</string>
    <string name="menu_sobre_nosotros">Sobre nosotros</string>
    <string name="menu_usuario">Usuario</string>
    <string name="menu_iniciar_sesion">Iniciar sesión</string>
    <string name="text_bienvenida_app">Cachuelito</string>
    <string name="slogan_text">La aplicación móvil que te permitirá conectarte con tus necesidades!.</string>
    <string name="citas_trabajo">Citas de trabajo</string>
    <string name="text_registro">¿Eres nuevo? Crea una cuenta</string>
    <string name="first_slide_title">Buscas trabajadores responsables, eficientes y confiables</string>
    <string name="second_slide_title">Contáctalos por medio de \&appname;</string>
    <string name="third_slide_title">Establece un acuerdo con nuestros trabajadores y contrátalos de manera inmediata</string>
    <string name="fourth_slide_title">Regístrate y disfruta de una nueva forma de conectarte con tus necesidades</string>
    <string name="iniciar_sesion_con_email">Iniciar sesión</string>
    <string name="iniciar_sesion_con_google">Iniciar sesión con Google</string>
    <string name="iniciar_sesion_con_celular">Iniciar sesión con celular</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Clave/contraseña</string>
    <string name="letras_espacio">abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZáéíóúÁÉÍÓÚ" "</string>
    <string name="validate_names_and_lastname">abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZáéíóúÁÉÍÓÚ</string>
    <string name="numbers_validation">0123456789</string>
    <string name="validate_complete_email">abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ0123456789.-/@"!#$%^*+-/=?^_`{|}</string>
    <string name="validate_email">abcdefghijklmnñopqrstuvwxyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ1234567890.-/""!#$%^*+-/=?^_`{|}</string>
    <string name="saving_data_text">Guardando registro...</string>
    <string name="phone">Número celular</string>
    <string name="lorem_ipsum3"><![CDATA[Intentar hasta lograrlo]]></string>
    <string name="perfil_empleador">
        Los empleadores pueden realizar lo siguiente dentro de &appname;:
        \n\n
        - Buscar y contratar a un trabajador para completar una determinada tarea.
        \n
        - Comunicación directa con trabajadores confiables y seguros.
    </string>
    <string name="perfil_trabajador">
        Los trabajadores acceden a los siguientes beneficios dentro de &appname;:
        \n\n
        - Comunicación directa con los empleadores registrados en la aplicación.
        \n
        - Obtención de una remuneración por los servicios prestados.
    </string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="record_policial_info">
        El record policial es un requisito indispensable para registrarte en &appname;.
        \n\n
        Este documento nos permite verificar la identidad cada trabajador antes de registrarse en la aplicación.
        \n\n &appname; no almacena ninguna información relacionada con su record policial en sus servidores.
    </string>
    <string name="article_fech_politica_priv_datos">Fecha de última actualización: 29/10/2022</string>
    <string name="article_ue_politica_priv_datos">
        De conformidad con el Reglamento (UE) 2016/679, del Parlamento Europeo y del Consejo, de 27 de abril de 2016, relativo a la protección de las personas
        físicas en lo que respecta al tratamiento de datos personales y a la libre circulación de estos datos (Reglamento General de Protección de Datos - RGPD),
        <b>&empresa;</b>, informa a los usuarios de la aplicación <b>&appname;</b> (en adelante, la Aplicación), acerca del tratamiento de los datos personales,
        que ellos voluntariamente hayan facilitado durante el proceso de registro, acceso y utilización del servicio.
    </string>
    <string name="article_subtitle_politica_priv_datos">
        \"Estos términos y condiciones de privacidad de datos establecen los lineamientos y prácticas de protección de datos personales de la aplicación &appname;.\"
    </string>
    <string name="article_text_politica_priv_datos">
        Lea atentamente estos términos y condiciones, ya que le ayudarán a tomar decisiones informadas sobre cómo compartir su información personal con nosotros.
        \n\n
        <b>1. ¿Cuál es la información que recopilamos?</b>
        \n\n
        Información de identificación personal (IIP) que recibamos mediante los formularios de registro que se encuentran en la aplicación móvil.
        La IIP incluye la siguiente información de identificación:
        \n\n
        \t\t• Nombres y apellidos
        \n
        \t\t• Correo electrónico, cuenta de google o número
        \n\t\tde teléfono celular
        \n
        \t\t• Foto de perfil
        \n
        \t\t• Ubicación
        \n
        \t\t• Record policial (Nuevos trabajadores)
        \n\n
        <b>2. ¿Cómo usamos esta información?</b>
        \n\n
        Los datos descritos en el punto anterior se utilizan como referencia para optimizar la pertinencia de los mensajes, notificaciones, llamadas, videollamadas
        y citas de trabajo que se pueden generar entre los usuarios, y para garantizar la integridad, confidencialidad y disponibilidad de la información almacenada
        en nuestros servidores.
        \n\n
        El almacenamiento y modificación de los datos proporcionados por los usuarios, constituirán operaciones de tratamiento llevadas a cabo por el Trabajador,
        Empleador o Administrador que se encuentre registrado y además tenga una sesión activa en la aplicación. Con la finalidad de garantizar el correcto funcionamiento
        de la aplicación, mantener la relación de prestación de servicios con el usuario, y para la gestión, administración, información,
        prestación y mejora del servicio, la operación de eliminación de datos será ejecutada únicamente por un Administrador de la Aplicación.
        \n\n
        Los datos personales facilitados por el usuario en especial su correo electrónico, cuenta de Google o número de celular, podrán emplearse para poder verficar la
        identidad de cada usuario que utilice la Aplicación.
        \n\n
        <i><u><b>3. Legitimación</b></u></i>
        \n\n
        El tratamiento de los datos del usuario, se realiza con las siguientes bases jurídicas que legitiman el mismo:
        \n\n
        \t\t• La solicitud de información y/o la contratación de los servicios de la Aplicación, cuyos términos y condiciones se
        pondrán a disposición del usuario en todo caso, con carácter previo, para su expresa aceptación.
        \n
        \t\t• El consentimiento libre, específico, informado e inequívoco del Usuario, poniendo a su disposición la presente política
        de privacidad, que deberá aceptar mediante una declaración o una clara acción afirmativa, como el marcado de una
        casilla dispuesta al efecto.
        \n\n
        En caso de que el usuario no facilite a &empresa; sus datos, o lo haga de forma errónea o incompleta, no será posible
        proceder al uso de la Aplicación.
        \n\n
        <b>4. Conservación de la información</b>
        \n\n
        Los datos personales proporcionados por el usuario, se conservarán en los sistemas y bases de datos de la plataforma Firebase, mientras aquél continúe haciendo uso
        de la Aplicación.
        \n\n
        Con el objetivo de depurar las posibles responsabilidades derivadas del tratamiento de los datos, los mismos se conservarán hasta que el usuario decida eliminar
        su cuenta de la Aplicación.
        \n\n
        <b>5. Destinatarios</b>
        \n\n
        Los datos no se comunicarán a ningún tercero ajeno a &empresa;, salvo por obligación legal o en cualquier caso, con una previa solicitud del consentimiento del usuario.
        \n\n
        De otra parte, &empresa; podrá dar acceso o transmitir los datos personales facilitados por el usuario, a terceros proveedores de servicios (Firebase), con los que
        haya suscrito acuerdos de encargo de tratamiento de datos, y que únicamente accedan a dicha información para prestar un servicio en favor y por cuenta del Administrador.
        \n\n
        <b>6. Retención de datos</b>
        \n\n &empresa;, informa al Usuario de que, como prestador de servicio de alojamiento de datos y en virtud de lo establecido en la Ley 34/2002 de 11 de julio de
        Servicios de la Sociedad de la Información y de Comercio Electrónico (LSSI), retiene por un período máximo de 12 meses la información imprescindible
        para identificar el origen de los datos alojados y el momento en que se inició la prestación del servicio.
        \n\n
        La retención de estos datos podrán ser utilizados únicamente en el marco de una investigación criminal o para la
        salvaguardia de la seguridad pública, poniéndose a disposición de los jueces y/o tribunales o del Ministerio que así los requiera.
        \n\n
        La comunicación de datos a las Fuerzas y Cuerpos de Seguridad del Estado, se hará en virtud de lo dispuesto por la normativa
        sobre protección de datos personales, y bajo el máximo respeto a la misma.
        \n\n
        <b>7. Protección de la información alojada</b>
        \n\n
        El Administrador adopta las medidas necesarias para garantizar la seguridad, integridad y confidencialidad de los datos conforme a lo dispuesto en el
        Reglamento (UE) 2016/679 del Parlamento Europeo y del Consejo, de 27 de abril de 2016, relativo a la protección de las personas físicas en lo
        que respecta al tratamiento de datos personales y a la libre circulación de los mismos.
        \n\n
        Al ser un prototipo, la Aplicación no cuenta con la realización de copias de seguridad o backup de la información del usuario. La protección de datos se
        da de tal manera que, el Administrador de la Aplicación es el único que puede eliminar la información de los diferentes usuarios registrados.
        \n\n
        La reposición de datos borrados no está incluida en el prototipo de la Aplicación.
        \n\n
        En caso de que el usuario quiera darse de baja en la Aplicación, podrá hacerlo remitiendo su voluntad por e-mail
        al correo electrónico: <b>4ndroidd3v3l@gmail.com</b>.
        \n\n
        <b>8. Comunicaciones comerciales vía electrónica</b>
        \n\n
        En aplicación de la LSSI (Ley de Servicios de la Sociedad de la Información), &empresa;, no enviará comunicaciones publicitarias o promocionales por correo
        electrónico u otro medio de comunicación electrónica.
    </string>
    <string name="version_app">Versión: 3.0</string>
</resources>