<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_baseline_home_24"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_datos_personales"
                    android:icon="@drawable/ic_perfil_personal"
                    android:title="@string/menu_datos_personales" />
                <item
                    android:id="@+id/nav_chats"
                    android:icon="@drawable/ic_burbuja_de_dialogo"
                    android:title="@string/menu_chats" />
                <item
                    android:id="@+id/nav_citas"
                    android:icon="@drawable/ic_citas"
                    android:title="@string/citas_trabajo" />
            </group>
        </menu>


    </item>
    <item android:title="@string/menu_admin">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_auth"
                    android:icon="@drawable/ic_authentication"
                    android:title="Autenticación" />
                <item
                    android:id="@+id/nav_trabajadores"
                    android:icon="@drawable/ic_trabajadores"
                    android:title="@string/menu_admin_trab" />
                <item
                    android:id="@+id/nav_empleadores"
                    android:icon="@drawable/ic_empleadores"
                    android:title="@string/menu_admin_emp" />
                <item
                    android:id="@+id/nav_oficios"
                    android:icon="@drawable/ic_oficios"
                    android:title="@string/menu_admin_ofi" />
            </group>
        </menu>


    </item>
    <item android:title="@string/menu_usuario">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_cerrar_sesion"
                    android:icon="@drawable/ic_cerrar_sesion"
                    android:title="@string/menu_cerrar_sesion" />
                <item
                    android:id="@+id/nav_eliminar_cuenta"
                    android:icon="@drawable/ic_baseline_delete_forever_24"
                    android:title="@string/menu_eliminar_cuenta" />
                <item
                    android:id="@+id/nav_iniciar_sesion"
                    android:icon="@drawable/ic_login"
                    android:title="@string/menu_iniciar_sesion" />

            </group>
        </menu>


    </item>
    <item android:title="Información">
        <menu>


            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_politica_priv"
                    android:icon="@drawable/ic_politica"
                    android:title="@string/menu_poli_priv" />
                <item
                    android:id="@+id/nav_sobre_nos"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/menu_sobre_nosotros" />
            </group>
        </menu>


    </item>


</menu>