<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.eliminarCuenta.EliminarInfoPhoneActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/menu_eliminar_cuenta">

        <ImageButton
            android:id="@+id/buttonInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginEnd="2dp"
            android:src="@drawable/ic_baseline_info_24"
            android:textAllCaps="false" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:gravity="center"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/acLoginImageViewLogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="start"
                android:src="@drawable/ic_oficios" />

            <TextView
                android:fontFamily="@font/andika"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/acLoginImageViewLogo"
                android:layout_centerHorizontal="true"
                android:text="@string/app_name"
                android:textColor="@color/teal_200"
                android:textSize="46sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPhone"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/phone"
            app:startIconDrawable="@drawable/ic_baseline_phone_android_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/numbers_validation"
                android:fontFamily="@font/andika"
                android:inputType="phone"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="Código de verificación"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/validate_complete_email"
                android:fontFamily="@font/andika"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/andika"
            android:text="Eliminar cuenta"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/andika"
            android:text="Enviar código"
            android:textAllCaps="false"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnResend"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/andika"
            android:text="Solicitar nuevo código"
            android:textAllCaps="false"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>