<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24">

        <Button
            android:id="@+id/buttonContinuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_marginEnd="2dp"

            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
            android:drawableTint="@color/white"
            android:text="Continuar"
            android:textAllCaps="false" />
    </androidx.appcompat.widget.Toolbar>

    <!--    <Button-->
    <!--        android:id="@+id/buttonContinuar"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_below="@id/toolbar"-->
    <!--        android:layout_alignParentEnd="true"-->
    <!--        android:layout_gravity="end"-->
    <!--        android:layout_marginEnd="2dp"-->
    <!--        android:background="#00000000"-->
    <!--        android:drawableEnd="@drawable/ic_baseline_navigate_next_24"-->
    <!--        android:text="Continuar"-->
    <!--        android:textAllCaps="false"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="18sp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_oficios"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="46sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/btnLoginWithEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawableTint="@color/white"
            android:text="@string/iniciar_sesion_con_email"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewContenido" />

        <Button
            android:id="@+id/btnLoginWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:drawableTint="@color/white"
            android:text="@string/iniciar_sesion_con_google"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnLoginWithPhone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:drawableLeft="@drawable/ic_baseline_phone_android_24"
            android:drawableTint="@color/white"
            android:text="@string/iniciar_sesion_con_celular"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

    </LinearLayout>


    <TextView
        android:id="@+id/textViewNuevoReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:text="@string/text_registro"
        android:textAlignment="center"
        android:textSize="18sp" />


</RelativeLayout>